# software-projects

Basketball-Stats/: backend.js  fill_db.js  setup.sql  video_edit.py
Basketball-Stats/frontend_mobile/: package-lock.json  package.json  video_edit.py
Desktop-Clock/: README.md  package-lock.json  package.json
QR-pilot/backend/: package-lock.json  package.json
action_tracker/: players.csv  teams.csv
marketplace/: requirements.txt
marketplace/basket/: urls.py  views.py
marketplace/basket/static/css/: custom.css
marketplace/basket/templates/basket/: detail.html
marketplace/core/static/css/: extra.css
marketplace/core/static/js/: extra.js
marketplace/listing/templates/listing/: index.html  product_list.html
marketplace/locale/en/LC_MESSAGES/: django.po
marketplace/locale/tr/LC_MESSAGES/: django.po
marketplace/product/templates/product/: details.html
marketplace/templates/: base.html
orhun-hukuk/back/: .gitignore  Cargo.toml  database.sql
orhun-hukuk/back/src/: db.rs  logic.rs  main.rs  status.rs
orhun-hukuk/back/static/: bundle.js  spectre.css
orhun-hukuk/front/: .babelrc  package-lock.json  package.json  webpack.config.js
orhun-hukuk/front/public/: index.html
orhun-hukuk/front/src/: App.js  actions.js  footer.js  index.js  reducer.js  status.js
orhun-hukuk/front/src/In/: add_client.js  admin.js  admin_main.js  client.js  delete_client.js  navbar.js
